--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <h4 class="h4 service-item-title">Osservatore Calcistico</h4>
 
                 <p class="service-item-text">
-                  Osservatore di Calcio...
+                  Work in progress...
                 </p>
               </div>
 
@@ -296,7 +296,7 @@
                 <h4 class="h4 service-item-title">Match Analyst</h4>
 
                 <p class="service-item-text">
-                  Match Analyst
+                  Work in progress...
                 </p>
               </div>
 
@@ -332,7 +332,7 @@
               <span>Software Developer, 09/2022 - Attuale, Milano</span>
 
               <p class="timeline-text" style="white-space: pre-line">
-                Attualmente sono dipendente presso Alten, dove mi occupo principalmente di Back-End.
+                Attualmente sono dipendente presso Alten, dove mi occupo principalmente di Back-End per progetti con cliente Intesa SanPaolo
 
               </p>
 
