--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/green bg.jpg" alt="fantamanager" loading="lazy">
+                  <img src="./assets/images/lavagna tattica.jpg" alt="fantamanager" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Calcolatore FM Fantacalcio </h3>
