--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="xNMUng9J1gUoxuWBazJpVL_NpqfWxKNnjvu6chKKmMc" />
+  <meta name="description" content="Sono Matteo Romagnoni, ho 20 anni e sono un Full Stack Developer. Qui potrai scoprire di cosa mi occupo e quali sono i progetti a cui sto lavorando."/>
   <title>Matteo Romagnoni</title>
 
   <!--
