--- a/index.html
+++ b/index.html
@@ -410,6 +410,20 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">SICS</h4>
+
+              <span>Football Data Intelligence, 09/2022 - Attuale, Milano</span>
+
+              <p class="timeline-text" style="white-space: pre-line">
+               Sto studiando per diventare Football Data Analyst. In particolare, i principali argomenti trattati riguardano: raccolta di dati e strumenti di analisi; metriche avanzate e data visualization; fondamenti di manipolazione dati in Python; guida pratica ai modelli di Expected Goals.
+               Inoltre, nel corso viene anche evidenziato come la Data Analysis può coniugarsi con la Video Analysis per fornire delle chiavi di lettura esclusive immediatamente applicabili dal punto di vista tattico attraverso la testimonianza di Antonio Gagliardi e Francesco Bordin, allenatori e Match Analyst professionisti.
+              </p>
+
+            </li>
+
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">ITS Angelo Rizzoli</h4>
 
               <span>IFTS Developer, 09/2021 - 07/2022, Milano</span>
