--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
               <span>Football Data Intelligence, 09/2022 - Attuale, Milano</span>
 
               <p class="timeline-text" style="white-space: pre-line">
-               Sto studiando per diventare Football Data Analyst. In particolare, i principali argomenti trattati riguardano:
+               Sto studiando per diventare Football Data Analyst. In particolare, nel corso sono trattati i seguenti temi:
                - raccolta di dati e strumenti di analisi; 
                - metriche avanzate e data visualization; 
                - fondamenti di manipolazione dati in Python; 
