--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.jpg" alt="Matteo Romagnoni" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Matteo Romagnoni" width="80">
         </figure>
 
         <div class="info-content">
@@ -272,6 +272,8 @@
 
             </li>
 
+            <!--
+
             <li class="service-item">
 
               <div class="service-icon-box">
@@ -305,7 +307,7 @@
             </li>
 
 
-            
+          -->
 
           </ul>
 
@@ -334,11 +336,13 @@
               <span>Software Developer, 09/2022 - Attuale, Milano</span>
 
               <p class="timeline-text" style="white-space: pre-line">
-                Attualmente sono dipendente presso Alten, dove mi occupo principalmente di Back-End per progetti con cliente Intesa SanPaolo
+                Mi sono occupato principalmente di Back-End per progetti SpringBoot con cliente Intesa SanPaolo.
 
               </p>
 
             </li>
+
+            <!--
 
             <li class="timeline-item">
 
@@ -356,6 +360,8 @@
                   </p>
 
             </li>
+
+          -->
 
 
             <li class="timeline-item">
