--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
               <h4 class="h4 timeline-item-title">Alten</h4>
 
-              <span>Software Developer, 09/2022 - Attuale, Milano</span>
+              <span>Software Developer, 09/2022 - 11/2022, Milano</span>
 
               <p class="timeline-text" style="white-space: pre-line">
                 Mi sono occupato principalmente di Back-End per progetti SpringBoot con cliente Intesa SanPaolo.
