--- a/index.html
+++ b/index.html
@@ -421,13 +421,8 @@
               <span>Football Data Intelligence, 09/2022 - Attuale, Milano</span>
 
               <p class="timeline-text" style="white-space: pre-line">
-               Sto studiando per diventare Football Data Analyst. In particolare, nel corso sono trattati i seguenti temi:
-               - raccolta di dati e strumenti di analisi; 
-               - metriche avanzate e data visualization; 
-               - fondamenti di manipolazione dati in Python; 
-               - guida pratica ai modelli di Expected Goals.
-
-               Inoltre, nel corso viene anche evidenziato come la Data Analysis può coniugarsi con la Video Analysis per fornire delle chiavi di lettura esclusive immediatamente applicabili dal punto di vista tattico attraverso la testimonianza di Antonio Gagliardi e Francesco Bordin, allenatori e Match Analyst professionisti.
+                Ho studiando per diventare Football Data Analyst. In particolare questo corso mi ha dato una migliore comprensione delle metodologie e delle tecniche di analisi dei dati utilizzate nel calcio e dell'utilizzo di dati statistici per valutare le prestazioni delle squadre e dei singoli giocatori. Mi ha permesso inoltre di acquisire maggiori conoscenze e competenze nella programmazione in Python.
+               Inoltre, nel corso viene è stato anche evidenziato come la Data Analysis può coniugarsi con la Video Analysis per fornire delle chiavi di lettura esclusive immediatamente applicabili dal punto di vista tattico attraverso la testimonianza di Antonio Gagliardi e Francesco Bordin, allenatori e Match Analyst professionisti.
               
               </p>
 
