--- a/index.html
+++ b/index.html
@@ -422,7 +422,8 @@
 
               <p class="timeline-text" style="white-space: pre-line">
                 Ho studiando per diventare Football Data Analyst. In particolare questo corso mi ha dato una migliore comprensione delle metodologie e delle tecniche di analisi dei dati utilizzate nel calcio e dell'utilizzo di dati statistici per valutare le prestazioni delle squadre e dei singoli giocatori. Mi ha permesso inoltre di acquisire maggiori conoscenze e competenze nella programmazione in Python.
-               Inoltre, nel corso viene è stato anche evidenziato come la Data Analysis può coniugarsi con la Video Analysis per fornire delle chiavi di lettura esclusive immediatamente applicabili dal punto di vista tattico attraverso la testimonianza di Antonio Gagliardi e Francesco Bordin, allenatori e Match Analyst professionisti.
+               
+                Inoltre, nel corso è stato anche evidenziato come la Data Analysis può coniugarsi con la Video Analysis per fornire delle chiavi di lettura esclusive immediatamente applicabili dal punto di vista tattico attraverso la testimonianza di Antonio Gagliardi e Francesco Bordin, allenatori e Match Analyst professionisti.
               
               </p>
 
